# codebox

./: package-lock.json  package.json  pyproject.toml
codebox/: my_example.ipynb
codebox/core/: codebox.md  localbox.py  localbox_tester.py
codebox/jnb/: add_cell_by_url.py  edit_nb.py  nb_control.py
codebox/llm/: azure_openai.py  call_for_proxy_server_test.py  call_from_llm_proxy.py  call_https.py  call_speed.py
codebox/llm/gpt4v/: gpt4v_tmp.py  gpt4v_tmp2.py
codebox/speech2text/: recognize_google.py  recognize_google_thread.py
codebox/streamlit/: app.py  app_dashboard.py  app_dashboard_dataloader.py  app_dashboard_v2.py  app_llm_space.py  state_tmp.py
codebox/tmp/: client_tmp.py  codebox.md  localbox.py  localbox_tester.py  my_example.ipynb  run_ipynb.py  settings.py
codebox/tmp/redis_tmp/: redis_tmp.py
