[tool.poetry]
name = "codebox"
version = "0.1.0"
description = ""
authors = ["usakaonick@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.9"
aiohttp = "^3.9.1"
codeboxapi = "^0.0.19"
websockets = "11.0.3"
jupyter-kernel-gateway = "^2.5.2"
numpy = "^1.26.2"
pyaudio = "^0.2.14"
speechrecognition = "^3.10.1"
google-cloud-speech = "^2.23.0"
redis = "^5.0.1"
openai = "1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
